// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "shop-goframe-micro-service/app/goods/api/pbentity";

import "google/protobuf/timestamp.proto";

message CartInfo {
    int32                     Id        = 1; // 购物车表
    int32                     UserId    = 2; //
    int32                     GoodsId   = 3; // 商品id
    int32                     Count     = 4; // 商品数量
    google.protobuf.Timestamp CreatedAt = 5; //
    google.protobuf.Timestamp UpdatedAt = 6; //
}